Refactorizacion del codigo

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -6,10 +6,10 @@ serenity {
   compress.filenames = true
   take.screenshots = BEFORE_AND_AFTER_EACH_STEP
 
-  args=["start-maximized",
-    "lang=en","remote-allow-origins=*",
-    "incognito","disable-popup-blocking"
-  ]
+  //args=["start-maximized",
+    //"lang=en","remote-allow-origins=*",
+    //"incognito","disable-popup-blocking"
+ // ]
 
 }
 
